# PoE-Enchantress

./: .gitignore  CMakeLists.txt  PoE-Enchantress.ahk  README.md  all_enchants.txt  enchant_remapping.txt  heist_items.json  heist_remapping.txt
Training/: targets.json
Training/Synthetic/: training.py
examples/: general_enchants.txt  heists.txt  services.txt
subscripts/: HeistTracking.ahk  MTXSpecials.ahk  NinjaPricing.ahk  ScanAndPrice.ahk  Scanner.ahk  Settings.ahk
tools/: .gitignore  all_enchants.txt  get_daily_enchants.py  get_enchants.py  get_heist_prices.py  reduced_mapping.py
tools/snipper/: JSONValue.cpp  notes.txt  snipper.cpp
